--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,12 @@ backports.zoneinfo==0.2.1
 Django==4.0
 django-cors-headers==3.10.1
 djangorestframework==3.13.1
+mysqlclient==2.1.0
 Pillow==8.4.0
 pycodestyle==2.8.0
 pytz==2021.3
 sqlparse==0.4.2
 toml==0.10.2
+
+
+
